--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -94,3 +94,152 @@ body,
   border-radius: 4px;
   font-size: 1.2rem;
 }
+
+.mapboxgl-popup-content {
+  background: #ed8e8e;
+}
+
+/* popup msp */
+
+.mapboxgl-popup-close-button{
+  display: none;
+}
+
+.confirm {
+  position: fixed;
+  bottom: 50%;
+  left: -500%;
+  width: 80%;
+  min-width: 222px;
+  max-width: 500px;
+  height: auto;
+  background: #E2E2E2;
+  border-radius: 10px;
+  padding: 0;
+  margin: 0;
+  border-top: 1px solid white;
+  animation: fade 1s ease 1 forwards;
+}
+
+.confirm h1 {
+  text-align: center;
+  font-size: 1.2rem;
+  margin: 1rem 1rem 0.5rem;
+}
+
+.confirm p {
+  text-align: center;
+  font-size: 1rem;
+  margin: 0 2rem 4.5rem;
+}
+
+.confirm button:nth-of-type(1) {
+  border-top: 1px solid #B4B4B4;
+  border-right: 1px solid #B4B4B4;
+  left: 0;
+  border-radius: 0 0 0 10px;
+}
+
+.confirm button {
+  background: transparent;
+  border: none;
+  color: #1678E5;
+  height: 3rem;
+  font-size: 1rem;
+  width: 50%;
+  position: absolute;
+  bottom: 0;
+  cursor: pointer;
+}
+
+.confirm button:nth-of-type(2) {
+  border-top: 1px solid #B4B4B4;
+  right: 0;
+  border-radius: 0 0 10px 0;
+}
+
+
+.confirm button:hover {
+  font-weight: bold;
+  background: #EFEFEF;
+}
+.confirm button:active {
+  background: #D6D6D6;
+}
+
+.sidebar {
+  position: absolute;
+  width: 20%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  border-right: 1px solid rgba(0, 0, 0, 0.25);
+  z-index: 10;
+}
+
+.heading {
+  background: #fff;
+  border-bottom: 1px solid #eee;
+  min-height: 60px;
+  padding: 0 10px;
+  background-color: #ab8757;
+  color: #fff;
+  height: 15%;
+}
+
+.listings {
+  height: 75%;
+  overflow: auto;
+  padding-bottom: 60px;
+  background: antiquewhite;
+}
+
+.listings .item {
+  padding: 10px;
+  text-decoration: none;
+  border-bottom: 1px solid grey;
+}
+
+.listings .item .title {
+  color: #00853e;
+  font-weight: 700;
+}
+
+.listings .item.active .title, .listings .item .title:hover {
+  color: #8cc63f;
+}
+
+.img-icon{
+  height: auto;
+  max-width: 10%;
+}
+
+.icon-antd{
+  font-size: 25px
+}
+
+.icon-cancle{
+  color: #00853e;
+}
+
+.icon-cancle:hover{
+  cursor: pointer;
+  color: #8cc63f;
+
+}
+
+.footer{
+  background: #fff;
+  border-bottom: 1px solid #eee;
+  min-height: 60px;
+  padding: 0 10px;
+  background-color: #ab8757;
+  color: #fff;
+  height: 10%;
+}
+
+.footer:hover{
+  cursor: pointer;
+  background-color: #c6a77e;
+}
